Schrink the size of docker image